--- a/demo/index.html
+++ b/demo/index.html
@@ -107,7 +107,7 @@
   <div class="container">
     <h1>Flow Layout Demo</h1>
     
-    <div class="demo-section">
+    <div class="demo-section" style="position: sticky; top: 20px; z-index: 100;">
       <h2>Controls</h2>
       <div class="controls">
         <div class="control-group">
