--- a/demo/index.html
+++ b/demo/index.html
@@ -79,7 +79,7 @@
       text-align: center;
       font-weight: 500;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, visibility 0.3s ease;
     }
     
     .flow-item[data-visible="false"] {
